--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ __pycache__/
 # C extensions
 *.so
 
+# virtual-env
+env/
+
 #node-modolus
 django-admin-panel/node_modules/
 # Distribution / packaging
